--- a/src/content/blog/why-hobbies/index.mdx
+++ b/src/content/blog/why-hobbies/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Why you should have hobbies
+title: why you should have hobbies
 description: In this blog, Why i firmly believe that (almost) every software engineer should have hobbies outside their career and college
 pubDate: Jan 15 2024
 image: why-you-should-have-hobbies.png
